# Sanarip_Company

./: Dockerfile  docker-compose.yml  pyproject.toml
core/: script.py  settings.py  urls.py
geometry_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
geometry_app/migrations/: 0001_initial.py  0002_canton_alter_region_options_district_contour_and_more.py
