[tool.poetry]
name = "sanarip"
version = "0.1.0"
description = ""
authors = ["user <panpanzov.nur@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
djangorestframework = "^3.14.0"
django-geo = "^0.8"
postgis = "^1.0.4"
psycopg2 = "^2.9.6"
drf-yasg = "^1.21.7"
django-jazzmin = "^2.6.0"
django-contrib-postgres = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
